Add root color and main element styling

--- a/client/styles/base/_base.css
+++ b/client/styles/base/_base.css
@@ -1,5 +1,14 @@
-
+:root {
+    --main-color: #213C87;
+}
 
 body {
     font-family: 'Oswald', sans-serif;
+}
+
+main {
+display: flex;
+flex-direction: column;
+justify-content: center;
+align-items: center;
 }
