--- a/client/styles/components/_cards.css
+++ b/client/styles/components/_cards.css
@@ -22,7 +22,11 @@
   align-items: center;
 }
 
-
+.card-title {
+  color: var(--main-color);
+  font-size: 20px;
+  font-weight: bold;
+}
 
 .card-image {
   width: 100px;
