--- a/client/styles/components/_cards.css
+++ b/client/styles/components/_cards.css
@@ -31,8 +31,34 @@
 .card-image {
   width: 100px;
   height: 100px;
-  ;
   border-radius: 50%;
   object-fit: cover;
   object-position: top;
+}
+
+.card-button {
+  transform: translate(-50%, 125%);
+  width: 60%;
+  border-radius: 1rem;
+  border: none;
+  background-color: var(--main-color);
+  color: #fff;
+  font-size: 1rem;
+  padding: .5rem 1rem;
+  position: absolute;
+  left: 50%;
+  bottom: 0;
+  opacity: 0;
+  transition: 0.3s ease-out;
+}
+
+/*Hover*/
+.card:hover {
+  border-color: var(--main-color);
+  box-shadow: 0 4px 18px 0 rgba(0, 0, 0, 0.25);
+}
+
+.card:hover .card-button {
+  transform: translate(-50%, 50%);
+  opacity: 1;
 }
