--- a/client/styles/components/_modal.css
+++ b/client/styles/components/_modal.css
@@ -1,3 +1,10 @@
-.modal {
+.overlay {
     display: none;
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.5); /* Semi-transparent black color */
+    z-index: 1; /* Put the overlay behind the modal */
   }
