--- a/client/styles/components/_modal.css
+++ b/client/styles/components/_modal.css
@@ -5,6 +5,31 @@
     left: 0;
     width: 100%;
     height: 100%;
-    background-color: rgba(0, 0, 0, 0.5); /* Semi-transparent black color */
-    z-index: 1; /* Put the overlay behind the modal */
+    background-color: rgba(0, 0, 0, 0.5); 
+    z-index: 1; 
+  }
+
+  .modal {
+    display: none;
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    z-index: 10;
+  }
+  
+  .modal-content {
+    position: relative; 
+    background-color: white;
+    padding: 20px;
+    border-radius: 10px;
+    max-width: 600px;
+    margin: auto; 
+  }
+  
+  .close {
+    position: absolute;
+    top: 10px;
+    right: 10px;
+    cursor: pointer;
   }
