Reorganize code and add padding to input

--- a/client/styles/components/_modal.css
+++ b/client/styles/components/_modal.css
@@ -30,6 +30,22 @@
   margin-top: 0px;
 }
 
+.modal-content {
+  position: relative;
+  background-color: white;
+  padding: 20px;
+  border-radius: 10px;
+  max-width: 600px;
+  margin: auto;
+}
+
+.close {
+  position: absolute;
+  top: 10px;
+  right: 10px;
+  cursor: pointer;
+}
+
 .form-name-container{
   display: flex;
   flex-direction: row;
@@ -46,19 +62,14 @@ margin-bottom: 15px;
   margin-left: 10px; 
 }
 
-
-.modal-content {
-  position: relative;
-  background-color: white;
-  padding: 20px;
-  border-radius: 10px;
-  max-width: 600px;
-  margin: auto;
+input, select {
+  padding: 5px;
 }
+/* 
+option {
+  height: 150px;
+  overflow-y: auto;
+} */
 
-.close {
-  position: absolute;
-  top: 10px;
-  right: 10px;
-  cursor: pointer;
-}
+
+
