--- a/client/styles/components/_modal.css
+++ b/client/styles/components/_modal.css
@@ -27,6 +27,7 @@
 }
 
 .modal-header-title {
+  font-size: 1.3rem;
   margin-top: 0px;
 }
 
@@ -62,14 +63,34 @@ margin-bottom: 15px;
   margin-left: 10px; 
 }
 
-input, select {
+select, input, textarea {
   padding: 5px;
+  border-radius: 10px;
+  border: var(--main-color) solid 1px;
 }
-/* 
-option {
-  height: 150px;
-  overflow-y: auto;
-} */
 
+#month, #day, #year {
+  margin-right: 10px;
+  }
 
+#bio {
+  padding: 10px;
+}
 
+/* Tablet & Desktop */
+
+@media screen and (min-width: 768px) {
+  form {
+    font-size: 1.1rem;
+  }
+
+.modal-content {
+  max-width: 800px;
+}
+
+input, textarea {
+  padding: 10px;
+  border-radius: 10px;
+  border: var(--main-color) solid 1px;
+}
+}
