--- a/client/styles/main.css
+++ b/client/styles/main.css
@@ -4,5 +4,7 @@
 @import url('./components/_buttons.css');
 @import url('./components/_cards.css');
 @import url('./components/_header.css');
+@import url('./components/_profile.css');
+
 
 @import url('./components/_modal.css');
