--- a/client/styles/components/_profile.css
+++ b/client/styles/components/_profile.css
@@ -3,6 +3,19 @@
     flex-direction: row;
     justify-content: center;
 }
+
+.profile-detail-container {
+    color: var(--color-white);
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    max-width: 500px;
+    border-radius: 20px;
+    background:var(--main-color);
+
+}
+
 .fa-arrow-left, .profile-buttons  {
     font-size: 1.5rem;
 }
@@ -26,4 +39,12 @@
 .fa-trash-can {
     color: var(--color-red);
     margin: 0 10px
+}
+
+.profile-image {
+        width: 100px;
+        height: 100px;
+        border-radius: 50%;
+        object-fit: cover;
+        object-position: top;
 }
