--- a/client/styles/components/_buttons.css
+++ b/client/styles/components/_buttons.css
@@ -1,4 +1,4 @@
-.add-user-button, .create-user-button {
+.add-user-button, .create-user-button, .save-button, .cancel-edit-button {
     width: 125px;
     border-radius: 1rem;
     border: var(--main-color) solid 1px;
@@ -8,7 +8,17 @@
     padding: .5rem 1rem;
 }
 
-.add-user-button:hover, .create-user-button:hover {
+.save-button {
+    border: var(--color-white) solid 1px;
+}
+
+.cancel-edit-button {
+    background-color: var(--color-white);
+    color: var(--main-color);
+    border: var(--main-color) solid 1px;
+}
+
+.add-user-button:hover, .create-user-button:hover,  .save-button:hover, .cancel-edit-button:hover {
     cursor: pointer;
     background-color: var(--color-white);
     color: var(--main-color);
@@ -16,7 +26,16 @@
     transition: 150ms ease-in-out;
 }
 
+.cancel-edit-button:hover {
+    background-color: var(--main-color);
+    color: var(--color-white);
+    border: var(--color-white) solid 1px;
 
+}
+
+.edit-button {
+    margin-bottom: 20px;
+}
 
 /* Tablet & Desktop */
 
